--- a/college/index.html
+++ b/college/index.html
@@ -131,12 +131,13 @@
 
   <!-- 2x2 Year list -->
   <ul>
-    <li><a href="/college/year1.html">First Year</a></li>
-    <li><a href="/college/year2.html">Second Year</a></li>
-    <li><a href="/college/year3.html">Third Year</a></li>
-    <li><a href="/college/year4.html">Final Year</a></li>
+    <li><a href="college/year1.html">First Year</a></li>
+    <li><a href="college/year2.html">Second Year</a></li>
+    <li><a href="college/year3.html">Third Year</a></li>
+    <li><a href="college/year4.html">Final Year</a></li>
   </ul>
 </body>
 </html>
+
 
  
